[package]
name = "reconstructor-lv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
realfft = "3.0.0"
dasp = { version = "0.11.0", features = ["signal", "signal-window", "signal-window-hanning", "window-hanning"] }
assert_no_alloc = "1.1.2"
lv2 = "0.6.0"
