[package]
name = "peak_tracker_nih"
version = "0.1.0"
edition = "2021"
authors = ["Cam Sexton <cameron.t.sexton@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://ctsexton.github.io"
description = "Audio reconstructor using peak tracking"

# [workspace]
# members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "c0a72661e1dc1efb4d6281a619fe264e37314efc" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
core = { path = "../core" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
